. [NEW] Animation: Added new animation format that supports delays per frame and notifications per frame
. [NEW] LabelTTF: fontName and fontSize are properties
. [NEW] LabelBMFont: added setFntFile method
. [NEW] Sprite: spriteWithBatchNode / initWithBatchNode were removed. Use initWithTexture:batch.texture / spriteWithTexture:batch.texture instead
. [NEW] TileMap: polygon, polilines and gid are parsed from the objects (issue #1311)
. [FIX] DrawingPrimitives: drawColor4f() uses GLFloat instead of GLbyte (issue #1307)
. [FIX] GLView: Fixed memory leak while dispatching events (Mac only)
. [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
. [FIX] Sprite: adding family of sprites to a batchnode works as expected (issue #1217)
. [FIX] SpriteBatch: Quad extensions are public
. [FIX] Texture2D: initWithImage renamed with initWithCGImage
. [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone

version 2.0-beta2 17-Jan-2012
. [NEW] v1.1 Forward-ported changes:
		LabelTTF: word wrap works on Mac (issue #1074)
		Node: Added onExitTransitionDidStart (issue #792)
. [NEW] ActionManager: It is no longer a singleton. It is an ivar of director
. [NEW] Director: it is a subclass of UIViewController (iOS only)
. [NEW] Director: pushScene is the new recommended way to start the scene. Director will start the animation
		automatically once the view is displayed (iOS only)
. [NEW] Director: FPS & seconds per frame are displayed at the same time
. [NEW] EventDispatcher / TouchDispatcher: They are no longer singletons. They are an ivar of director.
. [NEW] GL View: Some classes were renamed to have more API concistency:
		MacWindow -> CCWindow (Mac)
		MacView -> CCGLView (Mac)
		EAGLView -> CCGLView (iOS)
		ESRenderer -> CCESRenderer (iOS)
		ES2Renderer -> CCES2Renderer (iOS)
		GLProgram -> CCGLProgram
. [NEW] Macros: Using __CC_PLATFORM_IOS/MAC internally. Suggested way for games too.
. [NEW] Menu: API CHANGE. "itemFrom..." was replaced with "itemWith..."