@@ -12,6 +12,9 @@
 
 static int sceneIdx=-1;
 static NSString *transitions[] = {
+	
+	@"TMXIsoTest1",
+	
 	@"TMXIsoZorder",
 	@"TMXOrthoZorder",
 	@"TMXIsoVertexZ",
